[package]
name = "glayout"
version = "0.1.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "glayout"
path = "src/lib.rs"

[[bin]]
name = "glayout-main"
path = "src/main.rs"

[build-dependencies]
gl_generator = "0.9"

[dependencies]
lazy_static = "1.0"
downcast-rs = "1.0"
cssparser = "*"
rc_forest = { path = "./rc_forest" }
glayout_element_style_macro = { path = "./element_style_macro" }

[target.'cfg(not(any(target_arch = "asmjs", target_arch = "wasm32")))'.dependencies]
glutin = "0.20"
image = "0.20"
font-kit = "0.1"
euclid = "0.19"
