[package]
name = "glayout"
version = "0.1.0"
authors = ["LastLeaf <bqfu@163.com>"]
build = "build.rs"

[lib]
name = "glayout"
path = "src/lib.rs"

[[bin]]
name = "glayout-main"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0"
downcast-rs = "1.0"
glutin = "*"
image = "*"

[build-dependencies]
gl_generator = "*"
